dpkg (1.18.17) UNRELEASED; urgency=medium

  [ Guillem Jover ]
  * Handle empty versions on validation in dpkg-maintscript-helper as they
    are optional. Regression introduced in dpkg 1.18.16. Closes: #848422
  * Validate versions too in dpkg-maintscript-helper symlink_to_dir and
    dir_to_symlink commands.
  * Documentation:
    - Clarify that dpkg-buildpackage does not run «dpkg-source --before-build»
      when using the -T option. Closes: #649531
  * Packaging:
    - Do not let dh_perl insert a dependency for libdpkg-perl, because it
      emits perl instead of perl:any. Instead hardcode a perl:any dependency
      to comply with the perl policy and make the Multi-Arch hinter happy.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sat, 17 Dec 2016 02:41:59 +0100

dpkg (1.18.16) unstable; urgency=medium

  [ Guillem Jover ]
  * Add support for specifying multiple targets on «dpkg-buildpackage -T»
    which will be run successively. Closes: #671074
  * Reject empty upstream versions in C and perl code. These are not permitted
    by deb-version(5), but the code was letting those through.
  * Use lzma_cputhreads() instead of sysconf(_SC_NPROCESSORS_ONLN) as the
    former is way more portable.
  * Automatically decrease xz encoder threads to try to not exceed available
    memory limits. This should alleviated the insane requirements of memory
    needed on 32-bit architectures with many cores, which results in more
    than the userspace addressable memory, when using settings such as
    -z9 and/or -Sextreme in dpkg-deb. Closes: #846564
  * Add new dpkg --validate-<thing> commands to validate the syntax of
    various <thing>s, where the current list is «pkgname», «trigname»,
    «archname» and «version».
  * Use the new dpkg --validate-version command in dpkg-maintscript-helper,