@@ -5,6 +5,9 @@ dpkg (1.18.17) UNRELEASED; urgency=medium
     are optional. Regression introduced in dpkg 1.18.16. Closes: #848422
   * Validate versions too in dpkg-maintscript-helper symlink_to_dir and
     dir_to_symlink commands.
+  * Improve logic to identify packages owning a library in dpkg-shlibdeps,
+    by handling the same library appearing more than once on the filesystem
+    Thanks to Raphaël Hertzog <hertzog@debian.org>. Closes: #843073
   * Documentation:
     - Clarify that dpkg-buildpackage does not run «dpkg-source --before-build»
       when using the -T option. Closes: #649531
